# django-web-nessie

./: README.md  main.py  manage.py  pyproject.toml  requirments.txt
myapp/: platform.py  views.py
myproject/: settings.py  urls.py
